--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+	"trailingComma": "none",
+	"tabWidth": 4,
+	"useTabs": true,
+	"printWidth": 100,
+	"semi": false,
+	"singleQuote": true,
+	"arrowParens": "avoid"
 }
