--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
       "modern-normalize": "^2.0.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
+      "react-hook-form": "^7.51.1",
       "react-redux": "^9.1.0",
       "react-router-dom": "^6.21.1",
       "redux": "^5.0.1"
