--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
       "eslint-plugin-boundaries": "^4.2.0",
       "eslint-plugin-import": "^2.29.1",
       "eslint-plugin-react": "^7.34.1",
+      "lucide-react": "^0.363.0",
       "modern-normalize": "^2.0.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
