--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
       "react-hook-form": "^7.51.1",
       "react-redux": "^9.1.0",
       "react-router-dom": "^6.21.1",
+      "react-select": "^5.8.0",
       "redux": "^5.0.1"
    },
    "devDependencies": {
