--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
       "react-redux": "^9.1.0",
       "react-router-dom": "^6.21.1",
       "react-select": "^5.8.0",
-      "redux": "^5.0.1"
+      "redux": "^5.0.1",
+      "uuid": "^9.0.1"
    },
    "devDependencies": {
       "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
@@ -35,6 +36,7 @@
       "@trivago/prettier-plugin-sort-imports": "^4.3.0",
       "@types/react": "^18.2.66",
       "@types/react-dom": "^18.2.22",
+      "@types/uuid": "^9.0.8",
       "@typescript-eslint/eslint-plugin": "^7.2.0",
       "@typescript-eslint/parser": "^7.2.0",
       "@vitejs/plugin-react": "^4.2.1",
