--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,12 @@ env:
     LOGIN: ${{secrets.DOCKER_LOGIN}}
     PASSWORD: ${{secrets.DOCKER_PASSWORD}}
     SERVER_NAME: ${{secrets.DOCKER_SERVER_NAME}}
+    CLIENT_NAME: ${{secrets.DOCKER_CLIENT_NAME}}
     SSH_USERNAME: ${{secrets.SSH_USERNAME}}
     SSH_HOST: ${{secrets.SSH_HOST}}
     SSH_PASSWORD: ${{secrets.SSH_PASSWORD}}
     SSH_SERVER_SCRIPT: ${{secrets.SSH_SERVER_SCRIPT}}
-    SSH_CLIENT_DIST: ${{secrets.SSH_CLIENT_DIST}}
+    VITE_SERVER_URL: ${{secrets.VITE_SERVER_URL}}
 
 jobs:
     server_build:
@@ -30,19 +31,25 @@ jobs:
         - name: push build
           run: docker push ${{env.LOGIN}}/${{env.SERVER_NAME}}:deploy
 
-    client_build_deploy:
+    client_build:
       runs-on: ubuntu-latest
-      needs: server_build
       defaults:
         run:
           working-directory: client
       steps:
         - uses: actions/checkout@master
-        - name: install dependencies
-          run: npm i
-        - name: build
-          run: npm run build
+        - name: login to docker
+          run: |
+            docker login -u ${{env.LOGIN}} -p ${{env.PASSWORD}}
+        - name: build image
+          run: docker build --build-arg VITE_SERVER_URL=${{env.VITE_SERVER_URL}} -t ${{env.LOGIN}}/${{env.CLIENT_NAME}}:deploy -f Dockerfile .
+        - name: push build
+          run: docker push ${{env.LOGIN}}/${{env.CLIENT_NAME}}:deploy
 
+    deploy:
+      runs-on: ubuntu-latest
+      needs: [server_build, client_build]
+      steps:
         - uses: actions/checkout@master
         - name: ssh connection
           uses: appleboy/ssh-action@v1.0.3
@@ -51,12 +58,3 @@ jobs:
             username: ${{env.SSH_USERNAME}}
             password: ${{env.SSH_PASSWORD}}
             script: bash ${{env.SSH_SERVER_SCRIPT}}
-
-        - name: uppdate file on server
-          uses: appleboy/scp-action@v0.1.7
-          with:
-            host: ${{env.SSH_HOST}}
-            username: ${{env.SSH_USERNAME}}
-            password: ${{env.SSH_PASSWORD}}
-            source: "client/dist/*"
-            target: ${{env.SSH_CLIENT_DIST}}
