--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -13,6 +13,11 @@ ENV VITE_SERVER_URL=$VITE_SERVER_URL
 
 RUN npm run build
 
+
 FROM nginx:stable
 
 COPY --from=build /app/dist /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY --from=build /app/.nginx/nginx.conf /etc/nginx/conf.d
+
+CMD ["nginx", "-g", "daemon off;"]
