--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+	"start:dev": "npm-run-all --parallel client:dev server:dev",
+	"client:dev": "yarn --cwd client dev",
+	"server:dev": "yarn --cwd server start:dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2"
+    "lint-staged": "^15.2.2",
+    "npm-run-all": "^4.1.5"
   }
 }
